--- a/doc/deploy/nginx/conf/nginx.conf
+++ b/doc/deploy/nginx/conf/nginx.conf
@@ -45,25 +45,31 @@ http  {
 		add_header      Access-Control-Allow-Headers        ${http_access_control_request_headers};
 		add_header      X-Cache                             $upstream_cache_status;
 
-       location  /swagger-ui.html  {
+		gzip                        on;
+        gzip_buffers                4                       16k;
+        gzip_comp_level             6;
+        gzip_vary                   on;
+        gzip_types                  text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+        location  /swagger-ui.html  {
             proxy_pass              https://gateway.laokou.org:5555;
             index                   index.html              index.htm;
-       }
+        }
 
-       location  /webjars  {
+        location  /webjars  {
        	    proxy_pass              https://gateway.laokou.org:5555;
             index                   index.html              index.htm;
-       }
+        }
 
-       location  /swagger-resources  {
+        location  /swagger-resources  {
             proxy_pass              https://gateway.laokou.org:5555;
             index                   index.html              index.htm;
-       }
+        }
 
-       location  /v3  {
+        location  /v3  {
             proxy_pass              https://gateway.laokou.org:5555;
             index                   index.html              index.htm;
-       }
+        }
 
         location  /  {
             # 你的打包路径
