--- a/doc/deploy/nginx/conf/nginx.conf
+++ b/doc/deploy/nginx/conf/nginx.conf
@@ -52,22 +52,22 @@ http  {
         gzip_types                  text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
         location  /swagger-ui.html  {
-            proxy_pass              https://gateway.laokou.org:5555;
+            proxy_pass              https://api.laokou.org:5555;
             index                   index.html              index.htm;
         }
 
         location  /webjars  {
-       	    proxy_pass              https://gateway.laokou.org:5555;
+       	    proxy_pass              https://api.laokou.org:5555;
             index                   index.html              index.htm;
         }
 
         location  /swagger-resources  {
-            proxy_pass              https://gateway.laokou.org:5555;
+            proxy_pass              https://api.laokou.org:5555;
             index                   index.html              index.htm;
         }
 
         location  /v3  {
-            proxy_pass              https://gateway.laokou.org:5555;
+            proxy_pass              https://api.laokou.org:5555;
             index                   index.html              index.htm;
         }
 
@@ -79,7 +79,7 @@ http  {
         }
 
 		location  /laokou/  {
-            proxy_pass              https://gateway.laokou.org:5555/;
+            proxy_pass              https://api.laokou.org:5555/;
             proxy_redirect          http://                 https://;
             proxy_connect_timeout   6000;
             proxy_read_timeout      6000;
