--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -78,12 +78,18 @@ server:
   port: 8848
   servlet:
     contextPath: /nacos
-  tomcat:
+  undertow:
+    threads:
+      # 设置IO线程数，来执行非阻塞任务，负责多个连接数
+      io: 16
+      # 工作线程数
+      worker: 256
+    # 每块buffer的空间大小
+    buffer-size: 1024
+    # 分配堆外内存
+    direct-buffers: true
     accesslog:
       enabled: true
-      max-days: 30
-      pattern: '%h %l %u %t "%r" %s %b %D %{User-Agent}i %{Request-Source}i'
-    basedir: logs
   ssl:
     # 开启证书
     enabled: false
