--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -76,6 +76,7 @@ spring:
               authorization-code-time-to-live: 1h
               access-token-time-to-live: 1h
               refresh-token-time-to-live: 6h
+              device-code-time-to-live: 1h
             registration:
               id: 95TxSsTPFA3tF12TBSMmUVK0da
               client-id: 95TxSsTPFA3tF12TBSMmUVK0da
