--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,7 @@
                 <MAIL-PASSWORD>xxx</MAIL-PASSWORD>
                 <MAIL-USERNAME>xxx</MAIL-USERNAME>
                 <JASYPT-ENCRYPTOR-PASSWORD>5201314wumeihua</JASYPT-ENCRYPTOR-PASSWORD>
+                <FILE-TEMP-PATH>d:/laokou/temp</FILE-TEMP-PATH>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -243,6 +244,7 @@
                 <MAIL-PASSWORD>ENC(rasxLuU0mvx9DIto2sRiah7GgE3gmKhEzlL1swSAP2Y=)</MAIL-PASSWORD>
                 <MAIL-USERNAME>2413176044@qq.com</MAIL-USERNAME>
                 <JASYPT-ENCRYPTOR-PASSWORD>5201314wumeihua</JASYPT-ENCRYPTOR-PASSWORD>
+                <FILE-TEMP-PATH>d:/laokou/temp</FILE-TEMP-PATH>
             </properties>
         </profile>
         <!-- 正式环境 -->
@@ -303,6 +305,8 @@
                 <MAIL-USERNAME>${MAIL_USERNAME:2413176044@qq.com}</MAIL-USERNAME>
                 <!--suppress UnresolvedMavenProperty -->
                 <JASYPT-ENCRYPTOR-PASSWORD>${JASYPT_ENCRYPTOR_PASSWORD:5201314wumeihua}</JASYPT-ENCRYPTOR-PASSWORD>
+                <!--suppress UnresolvedMavenProperty -->
+                <FILE-TEMP-PATH>${FILE_TEMP_PATH:/opt/temp}</FILE-TEMP-PATH>
             </properties>
         </profile>
     </profiles>
