feat: docker-compose 3.2.1

--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -203,6 +203,7 @@ services:
       - env/monitor.env
     extra_hosts:
       - "monitor.laokou.org:192.168.30.130"
+      - "nacos.laokou.org:192.168.30.130"
     depends_on:
       - laokou-register
     network_mode: bridge
@@ -323,6 +324,7 @@ services:
       - "mysql.laokou.org:192.168.30.130"
       - "rocketmq.laokou.org:192.168.30.130"
       - "elasticsearch.laokou.org:192.168.30.130"
+      - "seata.laokou.org:192.168.30.130"
     restart: always
     privileged: true
     network_mode: bridge
@@ -346,6 +348,7 @@ services:
       - "kafka.laokou.org:192.168.30.130"
       - "redis.laokou.org:192.168.30.130"
       - "mysql.laokou.org:192.168.30.130"
+      - "seata.laokou.org:192.168.30.130"
     restart: always
     privileged: true
     network_mode: bridge
