feat: security依赖于auth-domain，调整生产环境单点登录，调整nginx配置文件，优化代码，调整docker-compose

--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -300,6 +300,7 @@ services:
       - "kafka.laokou.org:192.168.30.130"
       - "redis.laokou.org:192.168.30.130"
       - "mysql.laokou.org:192.168.30.130"
+      - "vue.laokou.org:192.168.30.130"
     restart: always
     privileged: true
     network_mode: bridge
