--- a/doc/deploy/nginx/conf/nginx.conf
+++ b/doc/deploy/nginx/conf/nginx.conf
@@ -76,6 +76,14 @@ http  {
             root                    /usr/share/nginx/dist;
             index                   index.html              index.htm;
             try_files               $uri                    $uri/              /index.html =404;
+            error_page              405                     =200               @405;
+        }
+
+        location @405 {
+            proxy_pass              https://api.laokou.org:5555$request_uri;
+            proxy_set_header        Host                    $host;
+            proxy_set_header        X-Real-IP               $remote_addr;
+            proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
         }
 
 		location  /laokou/  {
