--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -121,9 +121,9 @@ spring:
         wiretap: false
       router:
         auth:
-          username: laokou
-          password: laokou123
-          type: annotation
+          username: ${ROUTER_AUTH_USERNAME:laokou}
+          password: ${ROUTER_AUTH_PASSWORD:laokou123}
+          enabled: ${ROUTER_AUTH_ENABLED:false}
 
 logging:
   config: classpath:log4j2-@PROFILE-ACTIVE@.xml
