style: 优化代码格式

--- a/laokou-service/laokou-module/laokou-im/laokou-im-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,17 +4,17 @@
     {
       "name": "spring.websocket.port",
       "type": "java.lang.Integer",
-      "description": "websocket端口."
+      "description": "WebSocket端口."
     },
     {
       "name": "spring.websocket.app-name",
       "type": "java.lang.String",
-      "description": "websocket应用名称."
+      "description": "WebSocket应用名称."
     },
     {
       "name": "spring.websocket.pool-name",
       "type": "java.lang.String",
-      "description": "websocket线程名称."
+      "description": "WebSocket线程名称."
     }
   ]
 }
