--- a/laokou-cloud/laokou-seata/pom.xml
+++ b/laokou-cloud/laokou-seata/pom.xml
@@ -246,6 +246,14 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>${docker.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
