--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <laokou.version>3.2.2</laokou.version>
         <!--spring-boot版本-->
-        <spring-boot.version>3.2.2-SNAPSHOT</spring-boot.version>
+        <spring-boot.version>3.2.2</spring-boot.version>
         <!--lombok版本-->
         <lombok.version>1.18.30</lombok.version>
         <!--mysql版本-->
@@ -52,8 +52,6 @@
         <easy-captcha.version>1.6.2</easy-captcha.version>
         <!--guava版本-->
         <guava.version>33.0.0-jre</guava.version>
-        <!--freemarker模板引擎依赖-->
-        <freemarker.version>2.3.32</freemarker.version>
         <!--oshi版本-->
         <oshi.version>6.4.11</oshi.version>
         <!--elasticsearch版本-->
@@ -67,7 +65,7 @@
         <!--spring-security-oauth2-authorization-server版本-->
         <spring-security-oauth2-authorization-server.version>1.2.1</spring-security-oauth2-authorization-server.version>
         <!--spring-boot-starter-oauth2-resource-server版本-->
-        <spring-boot-starter-oauth2-resource-server.version>3.2.2-SNAPSHOT</spring-boot-starter-oauth2-resource-server.version>
+        <spring-boot-starter-oauth2-resource-server.version>3.2.2</spring-boot-starter-oauth2-resource-server.version>
         <!--aws-java-sdk-s3版本-->
         <aws-java-sdk-s3.version>1.12.267</aws-java-sdk-s3.version>
         <!--dynamic-datasource版本-->
@@ -598,11 +596,6 @@
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-starter-client</artifactId>
                 <version>${spring-boot-admin.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.freemarker</groupId>
-                <artifactId>freemarker</artifactId>
-                <version>${freemarker.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.redisson</groupId>
