--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-        <spring-boot-maven-plugin.version>3.2.1</spring-boot-maven-plugin.version>
+        <spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <!--spring-boot版本-->
         <spring-boot.version>3.2.2</spring-boot.version>
@@ -185,6 +185,7 @@
                 <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
                 <NACOS-USERNAME>nacos</NACOS-USERNAME>
                 <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
+                <NACOS-VERSION>v1</NACOS-VERSION>
                 <SEATA-GROUP>SEATA_GROUP</SEATA-GROUP>
                 <SEATA-USERNAME>seata</SEATA-USERNAME>
                 <SEATA-PASSWORD>seata</SEATA-PASSWORD>
@@ -230,6 +231,7 @@
                 <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
                 <NACOS-USERNAME>nacos</NACOS-USERNAME>
                 <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
+                <NACOS-VERSION>v1</NACOS-VERSION>
                 <SEATA-GROUP>SEATA_GROUP</SEATA-GROUP>
                 <SEATA-USERNAME>seata</SEATA-USERNAME>
                 <SEATA-PASSWORD>seata</SEATA-PASSWORD>
@@ -282,6 +284,8 @@
                 <NACOS-USERNAME>${NACOS_USERNAME:nacos}</NACOS-USERNAME>
                 <!--suppress UnresolvedMavenProperty -->
                 <NACOS-PASSWORD>${NACOS_PASSWORD:nacos}</NACOS-PASSWORD>
+                <!--suppress UnresolvedMavenProperty -->
+                <NACOS-VERSION>${NACOS_VERSION:v1}</NACOS-VERSION>
                 <!--suppress UnresolvedMavenProperty -->
                 <SEATA-GROUP>${SEATA_GROUP:SEATA_GROUP}</SEATA-GROUP>
                 <!--suppress UnresolvedMavenProperty -->
