--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -118,6 +118,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-domain</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-mysql</artifactId>
                 <version>${flyway.version}</version>
