--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,15 +9,15 @@
     },
     {
       "name": "spring.security.oauth2.authorization-server.client",
-      "type": "java.util.Map<java.lang.String,org.laokou.auth.module.oauth2.config.OAuth2AuthorizationServerProperties.Client>",
+      "type": "java.util.Map<java.lang.String,org.laokou.auth.config.OAuth2AuthorizationServerProperties.Client>",
       "description": "Client配置.",
-      "sourceType": "org.laokou.auth.module.oauth2.config.OAuth2AuthorizationServerProperties"
+      "sourceType": "org.laokou.auth.config.OAuth2AuthorizationServerProperties"
     },
     {
       "name": "spring.security.oauth2.authorization-server.ignore-patterns",
       "type": "java.util.Set<java.lang.String>",
       "description": "忽略匹配URL.",
-      "sourceType": "org.laokou.auth.module.oauth2.config.OAuth2AuthorizationServerProperties"
+      "sourceType": "org.laokou.auth.config.OAuth2AuthorizationServerProperties"
     }
   ]
 }
