--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
@@ -50,3 +50,6 @@ spring:
           - data-id: application-common.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-rocketmq.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
