--- a/laokou-common/laokou-common-domain/pom.xml
+++ b/laokou-common/laokou-common-domain/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-core</artifactId>
+            <artifactId>laokou-common-mybatis-plus</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
