--- a/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
@@ -13,6 +13,10 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-auth-domain</artifactId>
         </dependency>
         <dependency>
@@ -37,10 +41,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.laokou</groupId>-->
-<!--            <artifactId>laokou-common-domain</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-sensitive</artifactId>
