--- a/laokou-common/laokou-common-domain/pom.xml
+++ b/laokou-common/laokou-common-domain/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-rocketmq</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-xxl-job</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
