feat: 操作日志切面代码优化，ddd改造

--- a/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
@@ -12,12 +12,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-core</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-domain</artifactId>
         </dependency>
     </dependencies>
 
