--- a/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-domain</artifactId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
