--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -37,6 +37,10 @@
 -->
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-admin-client</artifactId>
         </dependency>
         <dependency>
