--- a/laokou-service/pom.xml
+++ b/laokou-service/pom.xml
@@ -32,7 +32,7 @@
         <module>laokou-admin</module>
         <module>laokou-module</module>
         <module>laokou-auth</module>
-        <module>laokou-generate</module>
+        <module>laokou-generator</module>
         <module>laokou-report</module>
     </modules>
 </project>
