--- a/laokou-service/laokou-admin/laokou-admin-app/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-app/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>laokou-admin-infrastructure</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-admin-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
