--- a/laokou-service/laokou-auth/laokou-auth-app/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-app/pom.xml
@@ -23,6 +23,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-rate-limiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-auth-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
