--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -119,7 +119,17 @@
         <dependencies>
             <dependency>
                 <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-log</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.laokou</groupId>
                 <artifactId>laokou-common-domain</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-flowable-domain</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
