--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-domain/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-domain/pom.xml
@@ -2,22 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>laokou-flowable</artifactId>
         <groupId>org.laokou</groupId>
         <version>3.2.2</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-flowable-app</artifactId>
+
+    <artifactId>laokou-flowable-domain</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-flowable-infrastructure</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-flowable-client</artifactId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
