--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
@@ -17,15 +17,15 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-flowable-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-seata</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-mybatis-plus</artifactId>
+            <artifactId>laokou-flowable-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-security</artifactId>
         </dependency>
     </dependencies>
 
