--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
@@ -27,6 +27,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-log</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
