--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/src/main/resources/bootstrap.yml
@@ -55,3 +55,6 @@ spring:
           - data-id: application-common-flyway.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-rocketmq.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
