--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -37,6 +37,10 @@
 -->
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-admin-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-algorithm</artifactId>
         </dependency>
         <dependency>
@@ -64,10 +68,6 @@
                     <artifactId>laokou-common-openapi-doc</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
