--- a/laokou-cloud/laokou-xxl-job/pom.xml
+++ b/laokou-cloud/laokou-xxl-job/pom.xml
@@ -132,7 +132,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <imageName>${parent.artifactId}</imageName>
+                    <imageName>${project.parent.artifactId}</imageName>
                     <mainClass>com.xxl.job.admin.XxlJobApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
