--- a/laokou-service/laokou-auth/laokou-auth-start/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-start/pom.xml
@@ -149,7 +149,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <imageName>${parent.artifactId}</imageName>
+                    <imageName>${project.parent.artifactId}</imageName>
                     <mainClass>org.laokou.auth.AuthApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
