--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
@@ -151,7 +151,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <imageName>${parent.artifactId}</imageName>
+                    <imageName>${project.parent.artifactId}</imageName>
                     <mainClass>org.laokou.flowable.FlowableApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
