--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-start/pom.xml
@@ -134,7 +134,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <imageName>${parent.artifactId}</imageName>
+                    <imageName>${project.parent.artifactId}</imageName>
                     <mainClass>org.laokou.logstash.LogtashApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
