--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!--spring-framework版本-->
         <spring-framework.version>6.1.4</spring-framework.version>
         <!--cloud-alibaba版本-->
-        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2023.0.0.0-RC1</spring-cloud-alibaba.version>
         <!--springdoc-openapi版本-->
         <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
         <!--mapstruct版本-->
