--- a/laokou-common/laokou-common-crypto/pom.xml
+++ b/laokou-common/laokou-common-crypto/pom.xml
@@ -14,8 +14,8 @@
             <artifactId>laokou-common-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
 
