test: 增加auth测试用例

--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -66,6 +66,7 @@
         <module>laokou-common-rate-limiter</module>
         <module>laokou-common-domain</module>
         <module>laokou-common-log</module>
+        <module>laokou-common-test</module>
     </modules>
 
 </project>
