--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>laokou-common</module>
         <module>laokou-cloud</module>
         <module>laokou-service</module>
+        <module>laokou-test</module>
     </modules>
     <name>KCloud-Platform-Alibaba</name>
     <description>一个企业级微服务架构的云服务多租户SaaS平台</description>
