--- a/laokou-test/laokou-test-container/laokou-test-container-spring-boot/pom.xml
+++ b/laokou-test/laokou-test-container/laokou-test-container-spring-boot/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>laokou-common-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-core</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
